# reviser

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .hadolint.yaml  .mypy.ini  Dockerfile  LICENSE  README.md  docs_builder.py  image_builder.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
docs/: README.template.md  command.jinja2  configuration.md
examples/hello_lambda_deployer/: lambda.yaml
lambda_deployer/: __init__.py  templating.py
lambda_deployer/bundling/: __init__.py  _installer.py
lambda_deployer/commands/: __init__.py  aliaser.py  bundler.py  configer.py  deployer.py  exiter.py  lister.py  pruner.py  pusher.py  reloader.py  reporter.py  selector.py  sheller.py
lambda_deployer/commands/helper/: __init__.py
lambda_deployer/definitions/: __init__.py  abstracts.py  contexts.py  enumerations.py  infomatics.py  selections.py
lambda_deployer/definitions/configurations/: __init__.py  bundling.py  depending.py  enviromentals.py  layering.py  targeting.py
lambda_deployer/deploying/: __init__.py  publisher.py  updater.py  uploader.py
lambda_deployer/interactivity/: __init__.py  completions.py  runner.py  shells.py
lambda_deployer/interactivity/shells/: __init__.py  prompt.jinja2
lambda_deployer/servicer/: __init__.py  layering.py
lambda_deployer/servicer/functioning/: __init__.py
lambda_deployer/templating/: __init__.py  error.jinja2
lambda_deployer/tests/: test_utils.py
lambda_deployer/tests/definitions/: test_configurations_bundle_patterns.py
lambda_deployer/tests/definitions/scenario_a/: test_definitions_scenario_a.py
lambda_deployer/tests/definitions/scenario_b/: lambda.yaml  test_definitions_scenario_b.py
lambda_deployer/tests/interactivity/: test_completions.py  test_interactive_shells.py
lambda_deployer/tests/scenarios/: test_complex.py  test_simple.py  test_single_layer.py
lambda_deployer/tests/scenarios/complex/: lambda.yaml
lambda_deployer/tests/scenarios/simple/: scenario_alias.yaml  scenario_configs.yaml  scenario_list.yaml  scenario_one.yaml  scenario_select.yaml  scenario_status.yaml
lambda_deployer/tests/scenarios/single_layer/: pipper.json  scenario_prune.yaml  scenario_push.yaml
lambda_deployer/tests/scenarios/supports/: mocking.py  running.py  validating.py
reviser/: __init__.py  cli.py  parsing.py  utils.py
reviser/bundling/: __init__.py  _installer.py
reviser/commands/: __init__.py  aliaser.py  bundler.py  configer.py  deployer.py  exiter.py  invoker.py  lister.py  pruner.py  pusher.py  region_switcher.py  reloader.py  reporter.py  selector.py  sheller.py  tailer.py
reviser/commands/helper/: __init__.py  help.jinja2
reviser/definitions/: __init__.py  abstracts.py  aws.py  contexts.py  enumerations.py  infomatics.py  selections.py
reviser/definitions/configurations/: __init__.py  bundling.py  depending.py  enviromentals.py  imaging.py  layering.py  targeting.py  versioning.py
reviser/deploying/: __init__.py  publisher.py  updater.py  uploader.py
reviser/interactivity/: __init__.py  completions.py  runner.py
reviser/interactivity/shells/: __init__.py  execution_result.jinja2  prompt.jinja2  splash.jinja2
reviser/servicer/: __init__.py  layering.py
reviser/servicer/functioning/: __init__.py  echo_versions.jinja2
reviser/templating/: __init__.py
reviser/tests/: __init__.py  test_cli.py  test_utils.py
reviser/tests/bundling/: __init__.py  test_command_dependencies.py
reviser/tests/definitions/: __init__.py  test_configurations_bundle_patterns.py  test_versioning.py
reviser/tests/definitions/scenario_a/: lambda.yaml  pipper.json  requirements.txt  test_definitions_scenario_a.py
reviser/tests/definitions/scenario_b/: __init__.py  test_definitions_scenario_b.py
reviser/tests/definitions/scenario_image/: lambda.yaml  test_definitions_scenario_image.py  test_image_version_substitution.py
reviser/tests/definitions/scenario_multi_accounts_regional/: lambda.yaml  test_definitions_multi_accounts_regional.py
reviser/tests/definitions/scenario_regional/: lambda.yaml  test_definitions_regional_bucket.py
reviser/tests/definitions/shared_dependencies/: __init__.py  lambda.yaml  test_definitions_shared_dependencies.py
reviser/tests/deploying/: __init__.py  test_publisher.py
reviser/tests/interactivity/: __init__.py  test_completions.py  test_interactive_shells.py
reviser/tests/scenarios/: __init__.py  test_complex.py  test_image_based.py  test_simple.py  test_single_layer.py
reviser/tests/scenarios/complex/: lambda.yaml  lambda_complex.py  scenario_push.yaml  scenario_select.yaml  scenario_status.yaml
reviser/tests/scenarios/complex/complex_package/: __init__.py
reviser/tests/scenarios/complex/complex_package/ignores/: __init__.py
reviser/tests/scenarios/complex/ignore_package/: __init__.py
reviser/tests/scenarios/image_based/: lambda.yaml  scenario_bundle.yaml  scenario_push.yaml
reviser/tests/scenarios/simple/: lambda.yaml  lambda_simple.py  scenario_alias.yaml  scenario_configs.yaml  scenario_list.yaml  scenario_local_bundle.yaml  scenario_prune.yaml  scenario_prune_relative.yaml  scenario_push.yaml  scenario_region.yaml  scenario_reload.yaml  scenario_select.yaml  scenario_status.yaml  scenario_tail.yaml
reviser/tests/scenarios/simple/simple_package/: __init__.py
reviser/tests/scenarios/single_layer/: lambda.yaml  scenario_list.yaml  scenario_prune.yaml  scenario_push.yaml  scenario_select.yaml  scenario_status.yaml
reviser/tests/scenarios/supports/: __init__.py  mocking.py  running.py  validating.py
